<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">Download_Service_ID</string>
    <string name="notification_channel_name">Download Notification</string>


    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_success">Download Completed Successfully</string>
    <string name="download_fail">Download Failed</string>
    
    <string name="download_option_1">Glide - Image Loading Library by BumpTech</string>
    <string name="download_option_2">LoadApp - Current repository by Udacity</string>
    <string name="download_option_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download_img_desc">Download Image</string>

    <string name="select_option">Please Select which file to download</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="ok">OK</string>
</resources>
